Adding tests for Negociacao.java
Reformating code
Optimizing imports
Adding itens effective java