@@ -9,6 +9,7 @@ import org.junit.jupiter.api.Test;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
@@ -25,27 +26,27 @@ class CandlestickFactoryTest {
 
     @Test
     @DisplayName(value = "construir candle para a data corretamente")
-    void constroiCandleParaData() {
+    void constroiCandleParaDataCorretamente() {
         LocalDateTime hoje = LocalDateTime.now();
 
         Negociacao negociacao1 = new Negociacao(BigDecimal.valueOf(40.5), 100, hoje);
-        Negociacao negociacao2 = new Negociacao(BigDecimal.valueOf(45.5), 100, hoje);
+        Negociacao negociacao2 = new Negociacao(BigDecimal.valueOf(45.0), 100, hoje);
         Negociacao negociacao3 = new Negociacao(BigDecimal.valueOf(39.8), 100, hoje);
         Negociacao negociacao4 = new Negociacao(BigDecimal.valueOf(42.3), 100, hoje);
 
         List<Negociacao> negociacaoList = Arrays.asList(negociacao1, negociacao2, negociacao3, negociacao4);
         //EFFECTIVE JAVA
         //ITEM 47: Conheça e use as bibliotecas
-        double volume = negociacaoList.stream().mapToDouble(e -> Double.parseDouble(e.getPreco().multiply(BigDecimal.valueOf(e.getQuantidade())).toPlainString())).sum();
+        double volume = 16760.0;// negociacaoList.stream().mapToDouble(e -> Double.parseDouble(e.getPreco().multiply(BigDecimal.valueOf(e.getQuantidade())).toPlainString())).sum();
 
         CandlestickFactory factory = new CandlestickFactory();
         Candlestick candle = factory.constroiCandleParaData(hoje, negociacaoList);
 
         assertAll("Verificando candlestick",
-                () -> assertEquals(BigDecimal.valueOf(40.50), candle.getAbertura()),
-                () -> assertEquals(BigDecimal.valueOf(42.30), candle.getFechamento()),
-                () -> assertEquals(BigDecimal.valueOf(39.80), candle.getMinimo()),
-                () -> assertEquals(BigDecimal.valueOf(45.50), candle.getMaximo()),
+                () -> assertEquals(BigDecimal.valueOf(40.5), candle.getAbertura()),
+                () -> assertEquals(BigDecimal.valueOf(42.3), candle.getFechamento()),
+                () -> assertEquals(BigDecimal.valueOf(39.8), candle.getMinimo()),
+                () -> assertEquals(BigDecimal.valueOf(45.0), candle.getMaximo()),
                 () -> assertEquals(BigDecimal.valueOf(volume), candle.getVolume())
         );
         System.out.println(candle.toString());
@@ -54,12 +55,12 @@ class CandlestickFactoryTest {
 
     @Test
     @DisplayName(value = "construir candle com uma negociacao corretamente")
-    void constroiCandleComUmaNegociacao() {
+    void constroiCandleComUmaNegociacaoCorretamente() {
         LocalDateTime hoje = LocalDateTime.now();
 
         Negociacao negociacao1 = new Negociacao(BigDecimal.valueOf(40.5), 100, hoje);
 
-        List<Negociacao> negociacaoList = Arrays.asList(negociacao1);
+        List<Negociacao> negociacaoList = Collections.singletonList(negociacao1);
 
         double volume = negociacaoList.stream().mapToDouble(e -> Double.parseDouble(e.getPreco().multiply(BigDecimal.valueOf(e.getQuantidade())).toPlainString())).sum();
 
@@ -78,12 +79,10 @@ class CandlestickFactoryTest {
     }
 
     @Test
-    void constroiCandleSemNegociacoes() {
+    void constroiCandleSemNegociacoesCorretamente() {
         LocalDateTime hoje = LocalDateTime.now();
 
-        List<Negociacao> negociacaoList = Arrays.asList();
-
-        double volume = 0;
+        List<Negociacao> negociacaoList = Collections.emptyList();
 
         CandlestickFactory factory = new CandlestickFactory();
         Candlestick candle = factory.constroiCandleParaData(hoje, negociacaoList);
@@ -99,14 +98,15 @@ class CandlestickFactoryTest {
 
     @Test
     @DisplayName(value = "construir candle negociacoes em ordem crescente corretamente")
-    void constroiCandleComUmaNegociacoesEmOrdemCrescente() {
+    void constroiCandleComNegociacoesEmOrdemCrescenteCorretamente() {
         LocalDateTime hoje = LocalDateTime.now();
 
         Negociacao negociacao1 = new Negociacao(BigDecimal.valueOf(40.5), 100, hoje);
         Negociacao negociacao2 = new Negociacao(BigDecimal.valueOf(42.3), 100, hoje);
         Negociacao negociacao3 = new Negociacao(BigDecimal.valueOf(45.5), 100, hoje);
         Negociacao negociacao4 = new Negociacao(BigDecimal.valueOf(49.8), 100, hoje);
-        List<Negociacao> negociacaoList = Arrays.asList(negociacao1, negociacao2, negociacao3, negociacao4);
+        List<Negociacao> negociacaoList = List.of(negociacao1, negociacao2, negociacao3, negociacao4);
+
         //EFFECTIVE JAVA
         //ITEM 47: Conheça e use as bibliotecas
         double volume = negociacaoList.stream().mapToDouble(e -> Double.parseDouble(e.getPreco().multiply(BigDecimal.valueOf(e.getQuantidade())).toPlainString())).sum();
@@ -115,17 +115,18 @@ class CandlestickFactoryTest {
         Candlestick candle = factory.constroiCandleParaData(hoje, negociacaoList);
 
         assertAll("Verificando candlestick",
-                () -> assertEquals(BigDecimal.valueOf(40.50), candle.getAbertura()),
-                () -> assertEquals(BigDecimal.valueOf(49.80), candle.getFechamento()),
-                () -> assertEquals(BigDecimal.valueOf(40.50), candle.getMinimo()),
-                () -> assertEquals(BigDecimal.valueOf(49.80), candle.getMaximo()),
-                () -> assertEquals(BigDecimal.valueOf(volume), candle.getVolume())
+                () -> assertEquals(BigDecimal.valueOf(40.50), candle.getAbertura(), "Verificando abertura"),
+                () -> assertEquals(BigDecimal.valueOf(49.80), candle.getFechamento(), "Verificando fechamento"),
+                () -> assertEquals(BigDecimal.valueOf(40.50), candle.getMinimo(), "Verificando minimo"),
+                () -> assertEquals(BigDecimal.valueOf(49.80), candle.getMaximo(), "Verificando maximo"),
+                () -> assertEquals(BigDecimal.valueOf(volume), candle.getVolume(), "Verificando volumme")
         );
         System.out.println(candle.toString());
     }
+
     @Test
     @DisplayName(value = "construir candle negociacoes em ordem  decrescente corretamente")
-    void constroiCandleComUmaNegociacoesEmOrdemDecrescente() {
+    void constroiCandleComNegociacoesEmOrdemDecrescenteCorretamente() {
         LocalDateTime hoje = LocalDateTime.now();
 
         Negociacao negociacao4 = new Negociacao(BigDecimal.valueOf(49.8), 100, hoje);
@@ -149,5 +150,21 @@ class CandlestickFactoryTest {
                 () -> assertEquals(BigDecimal.valueOf(volume), candle.getVolume())
         );
         System.out.println(candle.toString());
+    }
+
+    @Test
+    public void apenasUmaNegociacaoGeraCandleComValoresIguais() {
+        LocalDateTime hoje = LocalDateTime.now();
+        Negociacao negociacao1 = new Negociacao(BigDecimal.valueOf(40.5), 100, hoje);
+        var negociacoes = Arrays.asList(negociacao1);
+        var fabrica = new CandlestickFactory();
+        var candle = fabrica.constroiCandleParaData(hoje, negociacoes);
+        assertAll("Verificando candle com valores iguais",
+                () -> assertEquals(BigDecimal.valueOf(40.5), candle.getAbertura()),
+                () -> assertEquals(BigDecimal.valueOf(40.5), candle.getFechamento()),
+                () -> assertEquals(BigDecimal.valueOf(40.5), candle.getMinimo()),
+                () -> assertEquals(BigDecimal.valueOf(40.5), candle.getMaximo()),
+                () -> assertEquals(BigDecimal.valueOf(4050.0), candle.getVolume())
+        );
     }
 }
